Massive refactor; introduce error pages.